--- a/Portfolio Page/projectspage.html
+++ b/Portfolio Page/projectspage.html
@@ -12,7 +12,7 @@
   <body>
     <div class="navbar" >
       <a class="vivify popIn" href="index.html" data-micron="flicker">Home</a>
-      <a class="vivify popIn" href="#contact" >CV</a>
+      <a class="vivify popIn" href="cvpage.html" >CV</a>
       <a class="vivify popIn" href="projectspage.html">Projects</a>
       <a class="vivify popIn" href="#contact">Contact</a>
       <a class="vivify popIn" href="#contact">Game</a>
