--- a/Portfolio Page/projectspage.html
+++ b/Portfolio Page/projectspage.html
@@ -20,6 +20,9 @@
 <div style="font-size: 30px;">
 <h1 data-micron="groove" >My Projects</h1>
 </div>
+
+
+<div class="dropdownflexbox">
     <div class="dropdown">
   <button class="dropbtn">Software Based</button>
   <div class="dropdown-content">
@@ -33,6 +36,7 @@
 <div class="dropdown-content2">
 <a href="https://soundcloud.com/user-345455971" target="_blank">SoundCloud</a>
 <a href="https://www.youtube.com/channel/UCMUto3nSpVUvQxIPo3OCJwg" target="_blank">YouTube</a>
+</div>
 </div>
 </div>
 
