--- a/Portfolio Page/index.html
+++ b/Portfolio Page/index.html
@@ -15,8 +15,7 @@
       <a class="vivify popIn" href="index.html" data-micron="flicker">Home</a>
       <a class="vivify popIn" href="cvpage.html" >CV</a>
       <a class="vivify popIn" href="projectspage.html">Projects</a>
-      <a class="vivify popIn" href="#contact">Contact</a>
-      <a class="vivify popIn" href="#contact">Game</a>
+      <a class="vivify popIn" href="gamepage.html">Game</a>
 
     </div>
 
@@ -36,13 +35,9 @@
     <footer class="vivify popIn">
 
 
-        <a href="https://www.facebook.com/profile.php?id=100006839268429" class="fa fa-facebook" target="_blank"></a>
-
-
-        <a href="https://www.instagram.com/deniswrynn/?hl=bg" class="fa fa-instagram" target="_blank"></a>
-
-
-        <a href="https://myaccount.google.com/?utm_source=OGB&tab=mk&utm_medium=act&pli=1&gar=1" class="fa fa-google" target="_blank"></a>
+      <a href="https://www.facebook.com/profile.php?id=100006839268429" class="fa fa-facebook" target="_blank"></a>
+  <a href="https://myaccount.google.com/?utm_source=OGB&tab=mk&utm_medium=act&pli=1&gar=1" class="fa fa-google" target="_blank"></a>
+      <a href="https://www.instagram.com/deniswrynn/?hl=bg" class="fa fa-instagram" target="_blank"></a>
 
 
     </footer>
