Changes to black stork

--- a/Black Stork Website/index.html
+++ b/Black Stork Website/index.html
@@ -14,6 +14,7 @@
 
 
     <link href="vivify.min.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Черен щъркел</title>
   </head>
   <body >
@@ -21,7 +22,7 @@
 
 
   <!-- NAVBAR -->
-    <nav class="navbar  navbar-expand-lg navbar-dark" style = " background-color: #202020;">
+    <nav class="navbar sticky-top  navbar-expand-lg navbar-dark" style = " background-color: #202020;">
       <a class="navbar-brand vivify popIn" href="#">
         <img class="logo" src="logo.jpg" alt="logo">
       </a>
@@ -35,7 +36,7 @@
             <a class="nav-link vivify popIn" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link vivify popIn" href="#">Contact</a>
+            <a class="nav-link vivify popIn" href="#contacts">Contact</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle vivify popIn" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,9 +61,9 @@
 
     <h2 class="info">За групата</h2>
 
-    <p class="text-center container-fluid" style="max-width:1100px" >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p class="text-center container-fluid" style="max-width:1040px" >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
-
+<br><br>
     <div class="container " id="pictures-home" style="padding: 0;">
       <div class="d-flex flex-row flex-wrap justify-content-center">
         <div class="d-flex flex-column">
@@ -77,8 +78,30 @@
       </div>
     </div>
 
+<br>
+<br>
+<br>
 
 
+    <div class="d-flex flex-column" id="contacts">
+    <h2 class="info">Контакти</h2>
+    </div>
+    <br><br>
+    <div class="d-flex justify-content-center align-items-sm-center  flex-sm-column  " >
+    <a href="https://www.facebook.com/pembqnalqstovica" target="_blank" class="fa fa-facebook"></a>
+    <a href="https://www.instagram.com/cherenshtarkel/?hl=bg" target="_blank" class="fa fa-instagram"></a>
+    <a href="https://www.youtube.com/channel/UChNznIIiIoauNBnxPe2XFGw" target="_blank" class="fa fa-youtube"></a>
+    </div>
+<br><br>
+
+
+
+
+<div class=" " >
+<p>Email: jagara@gmail.com</p>
+<p>Tel: 0886616262</p>
+<p>Pidgeon: Stefan</p>
+</div>
 
 
 
