--- a/Black Stork Website/index.html
+++ b/Black Stork Website/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 
-
+    <link rel="stylesheet" href="compact-gallery.css">
     <link href="vivify.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Черен щъркел</title>
@@ -43,9 +43,9 @@
               Gallery
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Images</a>
+              <a class="dropdown-item" href="#image-link">Images</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Videos</a>
+              <a class="dropdown-item" href="https://www.youtube.com/watch?v=bd6R06WIv6E" target="_blank">Videos</a>
             </div>
           </li>
           <li class="nav-item">
@@ -59,7 +59,7 @@
       </div>
     </nav>
 
-    <h2 class="info">За групата</h2>
+    <h2 class="info">За групата</h2><br><br>
 
     <p class="text-center container-fluid" style="max-width:1040px" >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
@@ -72,18 +72,18 @@
         <div class="d-flex flex-column">
           <img src="hora.jpg" alt="" class="img-fluid">
         </div>
-        <div class="d-flex flex-column">
+      <!-- Слагам това ид тук заради бутона контактс -->
+        <div id="contacts" class="d-flex flex-column">
           <img src="bobi.jpg" alt="" class="img-fluid">
         </div>
       </div>
     </div>
 
 <br>
-<br>
-<br>
 
 
-    <div class="d-flex flex-column" id="contacts">
+
+    <div class="d-flex flex-column" >
     <h2 class="info">Контакти</h2>
     </div>
     <br><br>
@@ -100,11 +100,114 @@
 <div class=" " >
 <p>Email: jagara@gmail.com</p>
 <p>Tel: 0886616262</p>
-<p>Pidgeon: Stefan</p>
+  <!-- Слагам това ид тук заради бутона имагес -->
+<p id="image-link">Pidgeon: Stefan</p>
 </div>
 
 
+<section class="gallery-block compact-gallery">
+    <div class="container">
+        <div class="info">
+            <h2>Снимки</h2>
+            <br><br>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <a class="lightbox" href="gallery1.jpg">
+                    <img class="img-fluid image" src="gallery1.jpg">
+                    <span class="description">
+                        <span class="description-heading">Каш</span>
+                        <span class="description-body">Това е Каш, който свири на бас китара.</span>
+                    </span>
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <a class="lightbox" href="gallery2.jpg">
+                    <img class="img-fluid image" src="gallery2.jpg">
+                    <span class="description">
+                        <span class="description-heading">Каш, отново.</span>
+                        <span class="description-body">Това май е Каш. Тъмно е.</span>
+                    </span>
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <a class="lightbox" href="gallery3.jpg">
+                    <img class="img-fluid image" src="gallery3.jpg">
+                    <span class="description">
+                        <span class="description-heading">Каш и Боби.</span>
+                        <span class="description-body">Свирят на музикални инструменти. Изглежда се забавляват.</span>
+                    </span>
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <a class="lightbox" href="gallery4.jpg">
+                    <img class="img-fluid image" src="gallery4.jpg">
+                    <span class="description">
+                        <span class="description-heading">Боби</span>
+                        <span class="description-body">Това е Боби. Изглежда замислен. Той обича да мисли.</span>
+                    </span>
+                    </a>
+                </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <a class="lightbox" href="gallery5.jpg">
+                    <img class="img-fluid image" src="gallery5.jpg">
+                    <span class="description">
+                        <span class="description-heading">Вальо</span>
+                        <span class="description-body">Чакай малко. Това не е той.</span>
+                    </span>
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <a class="lightbox" href="gallery6.jpg">
+                    <img class="img-fluid image" src="gallery6.jpg">
+                    <span class="description">
+                        <span class="description-heading">Каш за трети път.</span>
+                        <span class="description-body">Тук Каш прилича на Данте от Девил Мей Край.</span>
+                    </span>
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <a class="lightbox" href="gallery7.jpg">
+                    <img class="img-fluid image" src="gallery7.jpg">
+                    <span class="description">
+                        <span class="description-heading">Черен Щъркел</span>
+                        <span class="description-body">Черен. Щъркел. Ода.</span>
+                    </span>
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <a class="lightbox" href="gallery8.jpg">
+                    <img class="img-fluid image" src="gallery8.jpg">
+                    <span class="description">
+                        <span class="description-heading">Черен Щъркел 2</span>
+                        <span class="description-body">Черен щъркел с подкрепата на женския пол.</span>
+                    </span>
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                <a class="lightbox" href="gallery9.jpg">
+                    <img class="img-fluid image" src="gallery9.jpg">
+                    <span class="description">
+                        <span class="description-heading">Черен Щъркел 3</span>
+                        <span class="description-body">Черен щъркел с подкрепата на Боби.</span>
+                    </span>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 
+
+
+
+
+
+
+<footer class="footer">
+      <div class="container d-flex justify-content-center">
+        <span class="text-muted">All rights reserved. Black Stork Inc.</span>
+      </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
