--- a/BEBON/index.html
+++ b/BEBON/index.html
@@ -35,13 +35,13 @@
         <h1 id="coin-display">0</h1>
         <br>
         <br>
-        <div id="red-skin"><button class="menu-buttons"  >Red Hair Deni</button></div>
+        <div id="red-skin"><button class="menu-buttons" id="0" onclick="equipSkin(this)">Red Hair Deni</button></div>
         <br>
-        <div id="blonde-skin"><button style="opacity: 70%;" id="50"  class="menu-buttons" onclick="buySkin(this)">Blonde Hair Deni  50 Coins</button></div>
+        <div id="blonde-skin"><button style="opacity: 70%;" id="50"  class="menu-buttons" onclick="buySkin(this);equipSkin(this)">Blonde Hair Deni  50 Coins</button></div>
         <br>
-        <div id="orange-skin"><button style="opacity: 70%;" id="500" disabled  class="menu-buttons" onclick="buySkin(this)">Ginger Hair Deni  500 Coins</button></div>
-        <br>
-        <div id="dark-skin"><button style="opacity: 70%;" id="2000" disabled  class="menu-buttons" onclick="buySkin(this)">Dark Hair Deni  2000 Coins</button></div>
+        <div id="orange-skin"><button style="opacity: 70%;" id="500"   class="menu-buttons" onclick="buySkin(this);equipSkin(this)">Ginger Hair Deni  500 Coins</button></div>
+        <br>    
+        <div id="dark-skin"><button style="opacity: 70%;" id="2000"   class="menu-buttons" onclick="buySkin(this);equipSkin(this)">Dark Hair Deni  2000 Coins</button></div>
 
 
     </div>
