--- a/BEBON/index.html
+++ b/BEBON/index.html
@@ -21,9 +21,12 @@
         <br>
         <div id="shop-button"><button  class="menu-buttons" onclick="startShop()">SHOP</button></div>
         <br>
-        <div id="rules-button"><button  class="menu-buttons" >RULES</button></div>
+        <div id="rules-button"><button  class="menu-buttons" onclick="startRules()">RULES</button></div>
         <br>
         <div id="rules-button"><button  class="menu-buttons" onclick="startCredits()">CREDITS</button></div>
+        <br>
+       
+        <div id="start-music"><button id="start-music-btn"  class="menu-buttons" onclick="changeSong()">MUSIC</button></div>
     </div>
 
 
@@ -42,23 +45,30 @@
         <div id="orange-skin"><button style="opacity: 70%;" id="500"   class="menu-buttons" onclick="buySkin(this);equipSkin(this)">Ginger Hair Deni  500 Coins</button></div>
         <br>    
         <div id="dark-skin"><button style="opacity: 70%;" id="2000"   class="menu-buttons" onclick="buySkin(this);equipSkin(this)">Dark Hair Deni  2000 Coins</button></div>
+        <br>
+        <br>
+        <div id="return-div"><button  id="return-button"  class="menu-buttons" onclick="startMenu()">Back to Menu</button></div>
 
 
     </div>
 
 
      <!-- rules -->
-     <div id="rules" >
+     <div id="rules" style="display: none;" >
 
 
+        <br>
+        <br>
+        <div id="return-div"><button  id="return-button"  class="menu-buttons" onclick="startMenu()">Back to Menu</button></div>
 
     </div>
 
      <!-- credits -->
-     <div id="credits" >
+     <div id="credits" style="display: none;" >
         
-
-
+        <br>
+        <br>
+        <div id="return-div"><button  id="return-button"  class="menu-buttons" onclick="startMenu()">Back to Menu</button></div>
     </div>
 
 
