--- a/BEBON/index.html
+++ b/BEBON/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="icon" href="icon.png">
     <title>Deni's Pro Skater</title>
 </head>
 
@@ -55,8 +55,12 @@
 
      <!-- rules -->
      <div id="rules" style="display: none;" >
-
-
+        <br>
+        <br>
+        <br>
+        <h2>S P A C E</h2>
+        <br><br>
+        <p>Press space to jump over the aliens and collect coins to buy skins....yep that's about it.</p>
         <br>
         <br>
         <div id="return-div"><button  id="return-button"  class="menu-buttons" onclick="startMenu()">Back to Menu</button></div>
@@ -65,7 +69,9 @@
 
      <!-- credits -->
      <div id="credits" style="display: none;" >
-        
+        <br>
+        <br>
+        <p>Made by Denis Berberov with lots of love for Deni Uzunova.</p>
         <br>
         <br>
         <div id="return-div"><button  id="return-button"  class="menu-buttons" onclick="startMenu()">Back to Menu</button></div>
