point bux fixed

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,8 @@
         <div id="easy"><button id="easy-button" class="menu-buttons" onclick="startGame(this)">EASY</button></div>
         <div id="normal"><button  id="normal-button" class="menu-buttons" onclick="startGame(this)">MEDIUM</button></div>
         <div id="hard"><button id="hard-button" class="menu-buttons" onclick="startGame(this)">HARD</button></div>
-
+        <br>
+        <div id="return-div"><button  id="return-button"  class="menu-buttons" onclick="startMenu()">Back to Menu</button></div>
 
     </div>
     
@@ -66,7 +67,7 @@
         
         <br>
         <div id="return-div"><button  id="return-button"  class="menu-buttons" onclick="startMenu()">Back to Menu</button></div>
-        <br><br>
+        <br>
 
     </div>
 
