--- a/html/index.html
+++ b/html/index.html
@@ -109,6 +109,7 @@
         <p id="blocktext"></p>
 
         <div id="coin"></div>
+        <div id="flying-block"></div>
          
         </div>
         
