--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="icon.png">
+        
         <title>Dino-Rex</title>
     </head>
 
@@ -45,7 +45,7 @@
             <br>
             <div id="start-button"><button class="menu-buttons"
                     onclick="choseDifficulty()">START GAME</button></div>
-
+                
             <div id="shop-button"><button class="menu-buttons"
                     onclick="startShop()">SHOP</button></div>
 
@@ -56,7 +56,7 @@
                     onclick="startCredits()">CREDITS</button></div>
 
             <div id="reverse-button"><button id="rev-butt" class="menu-buttons"
-                    onclick="reverseMode()">REVERSE</button></div>
+                    onclick="reverseMode()">NORMAL</button></div>
 
 
 
@@ -71,8 +71,8 @@
             <h1 id="coin-display">0</h1>
             <br>
             <br>
-            <div id="red-skin"><button class="menu-buttons" id="0"
-                    onclick="equipSkin(this)">Red Hair Deni</button></div>
+            <div id="red-skin"><button class="menu-buttons" id="0"  style="opacity: 100%;"
+                    onclick="equipSkin(this)">Default Dino</button></div>
 
             <div id="blonde-skin"><button style="opacity: 70%;" id="50"
                     class="menu-buttons"
