--- a/pixi/end.html
+++ b/pixi/end.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="start_script.js"></script>
+    <script src="end_script.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Wiener Games</title>
-    <h1 id=>HighScore</h1>
-    <h1 id="high-score">HighScore</h1>
+    <h1 id=>Current Score</h1>
+    <h1 id="current-score">Current Score</h1>
     <form action="game.html">
-        <input type="submit" value="Start Game" />
+        <input type="submit" value="Play Again" />
     </form>
     <br>
-    <h1>Controls: W A S D</h1>
+    <form action="index.html">
+        <input type="submit" value="Go To Start" />
+    </form>
 </head>
 <body>
     
