--- a/pixi/game.html
+++ b/pixi/game.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="start_script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
+    <script src="script.js"></script>
     <title>Wiener Games</title>
-    <h1 id="high-score">HighScore</h1>
-    <form action="index.html">
-        <input type="submit" value="Start Game" />
-    </form>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
-    
+    <p id="name" >Denislav Berberov 2021</p>
 </body>
 </html>
