Refactoring and Img Directory Added

--- a/Black Stork Website/index.html
+++ b/Black Stork Website/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <!-- Required meta tags -->
@@ -24,7 +24,7 @@
   <!-- NAVBAR -->
     <nav class="navbar sticky-top  navbar-expand-lg navbar-dark" style = " background-color: #202020;">
       <a class="navbar-brand vivify popIn" href="#">
-        <img class="logo" src="logo.jpg" alt="logo">
+        <img class="logo" src="img/logo.jpg" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -67,14 +67,14 @@
     <div class="container " id="pictures-home" style="padding: 0;">
       <div class="d-flex flex-row flex-wrap justify-content-center">
         <div class="d-flex flex-column">
-          <img src="storks.jpg" alt="" class="img-fluid">
+          <img src="img/storks.jpg" alt="" class="img-fluid">
         </div>
         <div class="d-flex flex-column">
-          <img src="hora.jpg" alt="" class="img-fluid">
+          <img src="img/hora.jpg" alt="" class="img-fluid">
         </div>
       <!-- Слагам това ид тук заради бутона контактс -->
         <div id="contacts" class="d-flex flex-column">
-          <img src="bobi.jpg" alt="" class="img-fluid">
+          <img src="img/bobi.jpg" alt="" class="img-fluid">
         </div>
       </div>
     </div>
@@ -113,8 +113,8 @@
         </div>
         <div class="row no-gutters">
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                <a class="lightbox" href="gallery1.jpg">
-                    <img class="img-fluid image" src="gallery1.jpg">
+                <a class="lightbox" href="img/gallery1.jpg">
+                    <img class="img-fluid image" src="img/gallery1.jpg">
                     <span class="description">
                         <span class="description-heading">Каш</span>
                         <span class="description-body">Това е Каш, който свири на бас китара.</span>
@@ -122,8 +122,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                <a class="lightbox" href="gallery2.jpg">
-                    <img class="img-fluid image" src="gallery2.jpg">
+                <a class="lightbox" href="img/gallery2.jpg">
+                    <img class="img-fluid image" src="img/gallery2.jpg">
                     <span class="description">
                         <span class="description-heading">Каш, отново.</span>
                         <span class="description-body">Това май е Каш. Тъмно е.</span>
@@ -131,8 +131,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                <a class="lightbox" href="gallery3.jpg">
-                    <img class="img-fluid image" src="gallery3.jpg">
+                <a class="lightbox" href="img/gallery3.jpg">
+                    <img class="img-fluid image" src="img/gallery3.jpg">
                     <span class="description">
                         <span class="description-heading">Каш и Боби.</span>
                         <span class="description-body">Свирят на музикални инструменти. Изглежда се забавляват.</span>
@@ -140,8 +140,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                <a class="lightbox" href="gallery4.jpg">
-                    <img class="img-fluid image" src="gallery4.jpg">
+                <a class="lightbox" href="img/gallery4.jpg">
+                    <img class="img-fluid image" src="img/gallery4.jpg">
                     <span class="description">
                         <span class="description-heading">Боби</span>
                         <span class="description-body">Това е Боби. Изглежда замислен. Той обича да мисли.</span>
@@ -149,8 +149,8 @@
                     </a>
                 </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                <a class="lightbox" href="gallery5.jpg">
-                    <img class="img-fluid image" src="gallery5.jpg">
+                <a class="lightbox" href="img/gallery5.jpg">
+                    <img class="img-fluid image" src="img/gallery5.jpg">
                     <span class="description">
                         <span class="description-heading">Вальо</span>
                         <span class="description-body">Чакай малко. Това не е той.</span>
@@ -158,8 +158,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                <a class="lightbox" href="gallery6.jpg">
-                    <img class="img-fluid image" src="gallery6.jpg">
+                <a class="lightbox" href="img/gallery6.jpg">
+                    <img class="img-fluid image" src="img/gallery6.jpg">
                     <span class="description">
                         <span class="description-heading">Каш за трети път.</span>
                         <span class="description-body">Тук Каш прилича на Данте от Девил Мей Край.</span>
@@ -167,8 +167,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                <a class="lightbox" href="gallery7.jpg">
-                    <img class="img-fluid image" src="gallery7.jpg">
+                <a class="lightbox" href="img/gallery7.jpg">
+                    <img class="img-fluid image" src="img/gallery7.jpg">
                     <span class="description">
                         <span class="description-heading">Черен Щъркел</span>
                         <span class="description-body">Черен. Щъркел. Ода.</span>
@@ -176,8 +176,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                <a class="lightbox" href="gallery8.jpg">
-                    <img class="img-fluid image" src="gallery8.jpg">
+                <a class="lightbox" href="img/gallery8.jpg">
+                    <img class="img-fluid image" src="img/gallery8.jpg">
                     <span class="description">
                         <span class="description-heading">Черен Щъркел 2</span>
                         <span class="description-body">Черен щъркел с подкрепата на женския пол.</span>
@@ -185,8 +185,8 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                <a class="lightbox" href="gallery9.jpg">
-                    <img class="img-fluid image" src="gallery9.jpg">
+                <a class="lightbox" href="img/gallery9.jpg">
+                    <img class="img-fluid image" src="img/gallery9.jpg">
                     <span class="description">
                         <span class="description-heading">Черен Щъркел 3</span>
                         <span class="description-body">Черен щъркел с подкрепата на Боби.</span>
